<resources>
    <string name="app_name">BODA</string>
    <string name="nav_home">홈</string>
    <string name="nav_contacts">연락처</string>
    <string name="nav_callLog" >통화기록</string>
    <string name="nav_settings">설정</string>
    <string name="nav_activity_log">활동일지</string>
    <string name="nav_sync_btn">동기화</string>
    <string name="signup_tv_title">회원가입</string>
    <string name="signup_tv_name">이름(실명)<font color="#FF0000">*</font></string>
    <string name="signup_tv_id">아이디(ID)<font color="#FF0000">*</font></string>
    <string name="signup_tv_password">비밀번호<font color="#FF0000">*</font></string>
    <string name="signup_tv_password_confirm">비밀번호 확인<font color="#FF0000">*</font></string>
    <string name="signup_tv_phone">핸드폰 번호<font color="#FF0000">*</font></string>
    <string name="signup_tv_date">생년월일(YYYYMMDD)<font color="#FF0000">*</font></string>
    <string name="signup_tv_date_hint">YYYYMMDD</string>
    <string name="signup_tv_gender">성별<font color="#FF0000">*</font></string>
    <string name="signup_tv_marketing">마케팅 정보수신동의(선택)</string>
    <string name="signup_tv_id_hint">ID는 영문,숫자 조합만 가능</string>
    <string name="signup_tv_password_hint">8~16자,영어 대문자,숫자,특수문자 조합 추천</string>
    <string name="signup_tv_phone_hint">여러대의 휴대폰 사용시 가장 많이 사용하는 번호</string>
    <string name="signup_btn_id_confirm">중복확인</string>
    <string name="signup_btn_sing_up">가입하기</string>
    <string name="signup_tv_gender_boy">남성</string>
    <string name="signup_tv_gender_girl">여성</string>
    <string name="signup_tv_marketing_sms">SMS</string>
    <string name="signup_tv_marketing_app_push">앱 푸시</string>
    <string name="signup_btn_phone_confirm">본인인증</string>
    <string name="login_tv_auto_login">자동로그인</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_tv_find_id_pw"><u>ID 찾기/PW 찾기</u></string>
    <string name="login_btn_sign_up">회원가입</string>
    <string name="login_btn_google">구글 로그인</string>
    <string name="login_btn_naver">네이버 로그인</string>
    <string name="login_hint_id">ID</string>
    <string name="login_hint_password">Password</string>
    <string name="settings_btn_user_info">내 정보 보기</string>
    <string name="settings_btn_verified_numbers">인증된 번호 관리</string>
    <string name="settings_btn_subscription_payment">구독 및 결제</string>
    <string name="settings_btn_notifications">알림 설정</string>
    <string name="settings_btn_terms_conditions">약관 확인</string>
    <string name="settings_btn_support">1:1 문의하기</string>
    <string name="settings_btn_app_version">앱 버전</string>
    <string name="find_id_password_tv_title">ID/PW 찾기</string>
    <string name="find_id_password_tv_find_id">아이디 찾기</string>
    <string name="find_id_password_tv_change_password">비밀번호 변경하기</string>
    <string name="find_id_password_tv_change_password_id">아이디<font color="#FF0000">*</font></string>
    <string name="find_id_password_et_id_hint">아이디<font color="#FF0000">*</font></string>
    <string name="find_id_password_btn_verify_id">본인인증</string>
    <string name="find_id_password_btn_verify_password">본인인증</string>
    <string name="find_password_tv_password">비밀번호<font color="#FF0000">*</font></string>
    <string name="find_password_tv_password_confirm">비밀번호 확인<font color="#FF0000">*</font></string>
    <string name="find_password_btn_change_password">비밀번호 변경하기</string>
    <string name="find_password_tv_password_hint">8~16자,영어 대문자,숫자,특수문자 조합 추천</string>
    <string name="contact_detail_tv_name">이름</string>
    <string name="contact_detail_tv_phone">전화번호</string>
    <string name="contact_detail_tv_group">그룹</string>
    <string name="contact_detail_tv_address">주소</string>
    <string name="contact_detail_tv_car_number">차량번호</string>
    <string name="contact_detail_tv_car_type">차량종류</string>
    <string name="contact_detail_tv_memo">메모</string>
    <string name="contact_detail_tv_call_log">통화기록</string>
    <string name="contact_detail_tv_activity_log">활동일지</string>
    <string name="modify_group_btn_save">저장</string>
    <string name="modify_group_btn_cancel">취소</string>
    <string name="modify_group_btn_add_group">그룹추가</string>
    <string name="modify_group_tv_title">그룹 관리</string>

</resources>