<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_group_tv_title"
        android:textSize="@dimen/text_size_title"
        android:layout_marginBottom="40dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/modifyGroupRvGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <Button
        android:id="@+id/btnAddGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_group_btn_add_group"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <Button
            style="@style/Btn"
            android:id="@+id/modifyGroupBtnSave"
            android:backgroundTint="#A8A8A8"
            android:text="@string/modify_group_btn_save"/>
        <Button
            style="@style/Btn"
            android:id="@+id/modifyGroupBtnCancel"
            android:backgroundTint="#A8A8A8"
            android:layout_marginStart="40dp"
            android:text="@string/modify_group_btn_cancel"/>
    </LinearLayout>
</LinearLayout>