<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 스크롤 가능하게 ScrollView 추가 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!-- 로그인 폼 컨테이너 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"
                android:text="@string/signup_tv_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_tv_phone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_edit_phone"
                    style="@style/SignUpEditText"
                    android:inputType="number"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_up_btn_phone_confirm"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/signup_btn_phone_confirm"
                android:backgroundTint="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:cornerRadius="10dp"
                android:singleLine="true"

                />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_tv_name"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/SignUpEditText"
                    android:id="@+id/sign_up_edit_name"
                    android:maxLength="10"
                    android:inputType="text"
                 />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_tv_id"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_edit_id"
                        style="@style/SignUpEditText"
                        android:maxLength="16"
                        android:inputType="text"

                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_tv_id_hint"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="12sp"
             />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_tv_password"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_edit_password"
                    style="@style/SignUpEditText"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_tv_password_hint"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="12sp"
               />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_tv_password_confirm"
                style="@style/MyTextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_edit_password_confirm"
                    style="@style/SignUpEditText"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/login_eye_off"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_tv_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="12sp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_tv_date"
                style="@style/MyTextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_edit_date"
                    style="@style/SignUpEditText"
                    android:inputType="date"
                    android:maxLength="8"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_tv_gender"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signUpGenderBoy"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/signup_tv_gender_boy" />

                <RadioButton
                    android:id="@+id/signUpGenderGirl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/signup_tv_gender_girl" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_tv_marketing"
                android:textColor="@color/black"
                android:textSize="12sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="30dp"
                    android:layout_height="48dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/signup_tv_marketing_sms"

                   />

                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="30dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                   />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tv_marketing_app_push"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/sign_up_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/black"
                android:text="@string/signup_btn_sing_up"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
