<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!-- 스크롤 뷰 추가 -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 로그인 폼 컨테이너 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id_password_tv_title"
                android:textSize="@dimen/text_size_title"
                android:layout_marginBottom="100dp"
                android:textColor="@color/black"
                />


            <TextView
                android:id="@+id/login_btn_find_id_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id_password_tv_find_id"
                android:textSize="@dimen/text_size_subtitle"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"

                />

            <Button
                style="@style/Btn"
                android:id="@+id/login_btn_login"
                android:text="@string/find_id_password_btn_verify_id"
                android:layout_marginBottom="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="24dp"
                android:background="@color/black"
           />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id_password_tv_change_password"
                android:textSize="@dimen/text_size_subtitle"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/find_id_password_et_id_hint"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/find_id_password_et_change_password_id"
                    style="@style/SignUpEditText"
                    android:maxLength="16"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                style="@style/Btn"
                android:id="@+id/find_id_password_btn_verify_password"
                android:text="@string/find_id_password_btn_verify_password" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>