<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 스크롤 뷰 추가 -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 로그인 폼 컨테이너 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <!-- ID 입력 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_id"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyTextInputLayoutStyle"
                    android:id="@+id/login_edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:inputType="text"

                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 비밀번호 입력 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:drawableEnd="@drawable/login_eye_off"
                    android:maxLength="10"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <CheckBox
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tv_auto_login"
                    android:layout_gravity="center"
                    android:textSize="13sp"
                    />

            </LinearLayout>
            <!-- 로그인 버튼 -->
            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/login_btn_login"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/login_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/login_btn_sign_up"
                app:cornerRadius="20dp" />





        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
