<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!-- 스크롤 뷰 추가 -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 로그인 폼 컨테이너 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="비밀번호 변경하기"
                android:textSize="@dimen/text_size_title"
                android:layout_marginBottom="100dp"
                android:textColor="@color/black"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/find_password_tv_password"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/findPasswordEtChangePassword"
                    style="@style/SignUpEditText"
                    android:maxLength="16"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_password_tv_password_hint"
                android:gravity="end"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/findPasswordInputLayoutPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/find_password_tv_password_confirm"
                style="@style/MyTextInputLayoutStyle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/findPasswordEtChangePasswordConfirm"
                    style="@style/SignUpEditText"
                    android:maxLength="16"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_eye_off"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/findPasswordTvPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black" />

            <Button
                style="@style/Btn"
                android:id="@+id/findPasswordBtnVerifyPassword"
                android:text="@string/find_password_btn_change_password" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>